--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,12 +1,13 @@
 server { 
- listen 80;
- server_name frontend;
- location / {
-   root /usr/share/nginx/html;
-   try_files $uri /index.html;
- }
- 
- location /api/ {
-   proxy_pass http://api/;
- }
+	listen 80;
+
+	location / {
+		index index.html;
+		root /usr/share/nginx/html;
+		try_files $uri $uri/ $uri.html =404;
+	}
+
+	location /api/ {
+		proxy_pass http://api/;
+	}
 }
